veecle-osal-std-macros/tests/ui/invalid_attribute_name.rs
#[veecle_osal_std_macros::main(invalid = "debug")]
async fn main() {}
